--- a/Project-ฝึกงาน/Landing Page.css
+++ b/Project-ฝึกงาน/Landing Page.css
@@ -1,11 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+.mySlides {
+    display: none;
+}
+
+.mySlides img {
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+html.light {
+    --texts: #00125C;
+    --bgs: #BCCBFB;
+    --cl-h: #EDF0FF;
+}
+
 .container-content {
-    padding: 1vw 4vw;
+    padding: 0.5vw 13vw;
 }
 
 .top-text {
@@ -18,11 +36,7 @@ ul {
     list-style-type: none;
 }
 li {
-    margin: 0 1vw;
-}
-
-a {
-    text-decoration: none;
+    margin: 0  1vw 0 0;
 }
 
 .top-text-c {
@@ -31,53 +45,290 @@ a {
 }
 
 .top-text-c:hover {
-    color: #010145;
+    color: var(--texts);
 }
 
-.right-top {
-
+.bar-left {
+    display: flex;
+    align-items: center;
 }
 
 .bar-right {
     display: flex;
-    text-decoration: none;
 }
 
 .top-text-cr {
     color: #686867;
     text-decoration: none;
-    margin: 0   1.8vw;
+    margin: 0 1.8vw;
 }
 
 .top-text-cr:hover {
-    color: #010145;
-}
-
-.ili {
-    border: solid 1px #000;
-}
-
-.bar-left {
-    /* border: solid; */
-    margin: 2vw 3vw;
-
+    color: var(--texts);
 }
 
 .top-bar {
+    margin: 1vw 0 2vw 0;
+    display: flex;
+    justify-content: space-between;
+    font-family: "Kanit", sans-serif;
+}
+
+.login {
+    width: 200px;
+    height: 40px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.login:hover {
+    background-color: var(--cl-h);
+    transition: 0.5s;
+}
+
+.login-btn {
+    text-decoration: none;
+    color: var(--texts);
+}
+
+button {
+    font-family: "Kanit", sans-serif;
+    width: 80px;
+    border-radius: 5px;
+    font-size: 15px;
+    color: #fff;
+    background-color: #001154;
+    list-style-type: none;
+}
+
+button:hover {
+    background-color: #000C3D;
+    cursor: pointer;
+}
+
+img {
+    width: 100%; height: auto;
+}
+
+.bar-left {
+    display: flex;
+}
+
+.text-kaidee {
+    margin-left: 4vw;
+    text-decoration: none;
+    color: var(--texts);
+    display: inline-block;
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.3s ease;
+}
+
+.text-kaidee:hover {
+    border-bottom: 4px solid #00125C;
+    transition: 0.4s;
+}
+
+.bar-right-kaidee {
+    display: flex;
+    justify-content: space-between;
+    width: 390px;
+}
+
+.icon {
+    display: flex;
+    width: 70px;
+    justify-content: space-around;
+    transform: scale(1.3);
+    align-items: center;
+}
+
+i {
+    border-radius: 50%;
+    height: 20px;
+    width: auto;
+    color: #03185C;
+}
+
+.container-sh {
+    background-color: #D5D6F0;
+    width: 100%;
+    height: 4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.sidebar-search {
+    padding: 10px;
+    border-radius: 5px;
+    width: 55%;
+    border: none;
+    outline: none;
+    font-size: 17px;
+}
+
+.container-sh i {
+    position: absolute;
+    right: 25%;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #03185C;
+    cursor: pointer;
+    border: solid 1px red;
+}
+
+.slideshow-container {
+    max-width: 1800px;
+    margin: -30 auto 20px auto;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    padding: 20px;
+    color: #fff;
+    margin-top: -22px;
+    font-size: 18px;
+    font-weight: bold;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    text-decoration: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 5px 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+.container-p {
+    margin: 1vw 0 2vw 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-family: "Kanit", sans-serif;
+    color: var(--texts);
+    font-size: 24px;
+}
+
+.img-items {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 20px;
+}
+
+.img-items a {
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
+}
+
+.icon-items {
+    width: 5vw;
+    height: 5vw;
+    object-fit: contain;
+    display: flex;
+    text-decoration: none;
+}
+
+.option {
+    display: flex;
+    margin: 3vw 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.option-items {
+    color: #787878;
+    background-color: #fff;
+    border: none;
+    display: flex;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    height: 2vw;
+}
+
+.option-items:hover {
+    background-color: var(--cl-h);
+    transition: 0.5s;
+}
+
+.container-footer {
+    border: solid 1px red;
+}
+
+.text-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.logo-bar {
-    transform: scale(2);
+.text-footer h3 {
+    font-family: "Kanit", sans-serif;
+    color: var(--texts);
+    font-size: 24px;
+    margin-bottom: 1vw;
 }
 
-.logo-bar-text {
-    margin: 3vw;
-
+.text-footer a {
+    text-decoration: none;
+    color: #787878;
+    font-family: "Kanit", sans-serif;
+    font-size: 14px;
 }
 
-.bar-right {
-    
+.items-footer {
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-gap: 10px;
+}
+
+.items-fm {
+    width: 11vw;
+    object-fit: cover;
+    border-radius: 10px;
+    height: 12vw;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@media only screen and (max-width: 300px) {
+  .prev, .next {font-size: 11px}
 }
