--- a/Project-ฝึกงาน/Landing Page.css
+++ b/Project-ฝึกงาน/Landing Page.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
 
 * {
     margin: 0;
@@ -24,6 +25,7 @@ html.light {
 
 .container-content {
     padding: 0.5vw 13vw;
+
 }
 
 .top-text {
@@ -96,7 +98,9 @@ li {
 button {
     font-family: "Kanit", sans-serif;
     width: 80px;
+    height: 50px;
     border-radius: 5px;
+    border: none;
     font-size: 15px;
     color: #fff;
     background-color: #001154;
@@ -134,6 +138,7 @@ img {
     display: flex;
     justify-content: space-between;
     width: 390px;
+    align-items: center;
 }
 
 .icon {
@@ -154,7 +159,7 @@ i {
 .container-sh {
     background-color: #D5D6F0;
     width: 100%;
-    height: 4vw;
+    min-height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -177,7 +182,7 @@ i {
     transform: translateY(-50%);
     color: #03185C;
     cursor: pointer;
-    /* border: solid 1px red; */
+    border: solid 1px red;
 }
 
 .slideshow-container {
@@ -248,6 +253,26 @@ i {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-gap: 20px;
+    
+}
+
+.ctn-it {
+    justify-content: center;
+    align-items: center;
+}
+
+.ctn-it a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.titems-m {
+    display: flex;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+
 }
 
 .img-items a {
@@ -288,7 +313,7 @@ i {
 }
 
 .container-footer {
-    border: solid 1px red;
+    min-height: 60px;
 }
 
 .text-footer {
@@ -314,15 +339,60 @@ i {
 .items-footer {
     display: grid;
     grid-template-columns: repeat(6,1fr);
-    grid-gap: 10px;
+    grid-gap: 5px;
 }
 
 .items-fm {
     width: 11vw;
     object-fit: cover;
     border-radius: 10px;
-    height: 12vw;
+    height: 10vw;
 }
+
+.footer {
+    margin-top: 5vw;
+    background-color: #EBEBFA;
+    padding: 2vw;
+}
+
+.footer h3 {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-family: "Kanit", sans-serif;
+    color: var(--texts);
+    font-size: 24px;
+    height: 200px;
+}
+
+.title-p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #686867;
+    margin: 0.3vw 0.2vw;
+    max-height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.adr {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: #787878;
+    margin: 0 0.2vw;
+
+}
+
+.mo {
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: bold;
+    font-size: 17px;
+    margin: 0.5vw 0.2vw 0.2vw 0.2vw;
+}
+
 
 @keyframes fade {
     from {opacity: .4}
